# simplnx

./: .all-contributorsrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .markdownlint-configure-file.json  .style.yapf  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  LICENSE.md  PortingFilters.md  Priority_Filters.md  README.md  SUPPORT.md  azure-pipelines.yml  environment.yml  vcpkg-configuration.json  vcpkg.json
Core/: CMakeLists.txt  CorePlugin.cpp  CorePlugin.hpp  FilterGuide.md
Core/data/: 6_6_find_feature_centroids.dream3d  6_6_find_shapes.dream3d
Core/docs/: AlignSectionsFeatureCentroidFilter.md  ConvertColorToGrayScaleFilter.md  CreateGeometryFilter.md  ErodeDilateBadDataFilter.md  FeatureDataCSVWriterFilter.md  SharedFeatureFaceFilter.md  WriteASCIIDataFilter.md
Core/test/: AlignSectionsFeatureCentroidTest.cpp  ArrayCalculatorTest.cpp  CMakeLists.txt  CalculateArrayHistogramTest.cpp  CombineAttributeArraysTest.cpp  CombineAttributeMatricesTest.cpp  ConditionalSetValueTest.cpp  ConvertColorToGrayScaleTest.cpp  ConvertDataTest.cpp  CopyFeatureArrayToElementArrayTest.cpp  CopyObjectTest.cpp  CoreTestUtilities.hpp  CreateAttributeMatrixTest.cpp  CreateDataArrayTest.cpp  CreateDataContainerTest.cpp  CreateFeatureArrayFromElementArrayTest.cpp  CreateGeometryTest.cpp  CreateGridMontageTest.cpp  CreateImageGeometryTest.cpp  CreateStringArrayTest.cpp  CropVertexGeometryTest.cpp  DataContainerReaderTest.cpp  DataContainerWriterTest.cpp  ErodeDilateBadDataTest.cpp  ExecuteProcessTest.cpp  ExtractAttributeArraysFromGeometryTest.cpp  ExtractComponentAsArrayTest.cpp  ExtractVertexGeometryTest.cpp  FeatureCountDecisionTest.cpp  FeatureDataCSVWriterTest.cpp  FillBadDataTest.cpp  FindDerivativesTest.cpp  FindEuclideanDistMapTest.cpp  FindFeatureCentroidsFilterTest.cpp  FindNeighborhoodsTest.cpp  FindShapesFilterTest.cpp  FindSurfaceAreaToVolumeTest.cpp  FindTriangleGeomCentroidsTest.cpp  FindTriangleGeomSizesTest.cpp  GenerateColorTableTest.cpp  (+34 more)
DREAM3DReview/test/: AdaptiveAlignmentFeatureTest.cpp  AdaptiveAlignmentMisorientationTest.cpp  AdaptiveAlignmentMutualInformationTest.cpp  AlignGeometriesTest.cpp  ApplyTransformationToGeometryTest.cpp  ApproximatePointCloudHullTest.cpp  AverageEdgeFaceCellArrayToVertexArrayTest.cpp  AverageVertexArrayToEdgeFaceCellArrayTest.cpp  CMakeLists.txt  CombineStlFilesTest.cpp  ComputeFeatureEigenstrainsTest.cpp  ComputeUmeyamaTransformTest.cpp  CreateArrayofIndicesTest.cpp  DBSCANTest.cpp  DelaunayTriangulationTest.cpp  DiscretizeDDDomainTest.cpp  DownsampleVertexGeometryTest.cpp  EstablishFoamMorphologyTest.cpp  ExportCLIFileTest.cpp  ExtractInternalSurfacesFromTriangleGeometryTest.cpp  ExtractTripleLinesFromTriangleGeometryTest.cpp  FFTHDFWriterFilterTest.cpp  FindArrayStatisticsTest.cpp  FindCSLBoundariesTest.cpp  FindElementCentroidsTest.cpp  FindLayerStatisticsTest.cpp  FindMinkowskiBouligandDimensionTest.cpp  FindNeighborListStatisticsTest.cpp  FindNormTest.cpp  FindSurfaceRoughnessTest.cpp  FindVertexToTriangleDistancesTest.cpp  GenerateFeatureIDsbyBoundingBoxesTest.cpp  GenerateMaskFromSimpleShapesTest.cpp  IdentifyDislocationSegmentsTest.cpp  ImportCLIFileTest.cpp  ImportMASSIFDataTest.cpp  ImportPrintRiteHDF5FileTest.cpp  ImportPrintRiteTDMSFilesTest.cpp  ImportQMMeltpoolH5FileTest.cpp  ImportQMMeltpoolTDMSFileTest.cpp  (+26 more)
Generic/: CMakeLists.txt  FilterGuide.md  GenericPlugin.cpp
Generic/test/: CMakeLists.txt  FindBoundaryCellsTest.cpp  FindBoundingBoxFeaturesTest.cpp  FindFeatureCentroidsTest.cpp  FindFeaturePhasesBinaryTest.cpp  FindFeaturePhasesTest.cpp  FindSurfaceFeaturesTest.cpp  GenerateVectorColorsTest.cpp
ITKImageProcessing/: CMakeLists.txt  FilterGuide.md  ITKImageProcessingPlugin.cpp  PortingITKImageProcessingFilter.md
ITKImageProcessing/docs/: ITKAbsImage.md  ITKAcosImage.md  ITKAdaptiveHistogramEqualizationImage.md  ITKAsinImage.md  ITKAtanImage.md  ITKBinaryContourImage.md  ITKBinaryMorphologicalClosingImage.md  ITKBinaryThresholdImage.md  ITKClosingByReconstructionImage.md  ITKCosImage.md  ITKGradientMagnitudeImage.md  ITKGrayscaleFillholeImage.md  ITKImageReader.md  ITKImportImageStack.md  ITKInvertIntensityImage.md  ITKLog10Image.md  ITKLogImage.md  ITKMaskImage.md  ITKMedianImage.md  ITKMorphologicalWatershedImage.md  ITKNormalizeImage.md  ITKOpeningByReconstructionImage.md  ITKOtsuMultipleThresholdsImage.md  ITKSignedMaurerDistanceMapImage.md  ITKSinImage.md  ITKSqrtImage.md  ITKTanImage.md
ITKImageProcessing/pipelines/: (02) Image Segmentation.d3dpipeline
ITKImageProcessing/test-generated/: ITKAbsImageTest.cpp  ITKApproximateSignedDistanceMapImageTest.cpp  ITKBilateralImageTest.cpp  ITKBinaryClosingByReconstructionImageTest.cpp  ITKBinaryDilateImageTest.cpp  ITKBinaryErodeImageTest.cpp  ITKBinaryMorphologicalClosingImageTest.cpp  ITKBinaryMorphologicalOpeningImageTest.cpp  ITKBinaryOpeningByReconstructionImageTest.cpp  ITKBinaryProjectionImageTest.cpp  ITKExpImageTest.cpp  (+59 more)
OrientationAnalysis/: CMakeLists.txt  FilterGuide.md  OrientationAnalysisPlugin.cpp
Sampling/: CMakeLists.txt  FilterGuide.md  SamplingPlugin.cpp  SamplingPlugin.hpp
docs/: AnacondaPackages.md  Build_From_Source.md  CMakeLists.txt  Code_Style_Guide.md  Doxyfile.in  PortingFilters.md  Porting_Filters.md  conf.py  dream3d_file_spec.md  index.rst
test/: AppTest.cpp  ArgumentsTest.cpp  BitTest.cpp  CMakeLists.txt  ChunkDataStore.hpp  CoreFilterTest.cpp  DREAM3DFileTest.cpp  DataArrayTest.cpp  DataPathTest.cpp  DataStructObserver.cpp  DataStructObserver.hpp  DataStructTest.cpp  DownloadTestData.cmake  DynamicFilterInstantiationTest.cpp  FilePathGeneratorTest.cpp  FileVecTest.cpp  FilterValidationTest.cpp  GeometryTest.cpp  GeometryTestUtilities.hpp  H5Test.cpp  IOFormat.cpp  MontageTest.cpp  OutOfCorePipeline.cpp  ParametersTest.cpp  PipelineSaveTest.cpp  PipelineTest.cpp  PluginTest.cpp  SimplJsonConversionTest.cpp  StringUtilitiesTest.cpp  UnitTestCommon.hpp  UuidTest.cpp  complex_test_dirs.h.in  complex_test_dirs.hpp.in  simplnx_test_dirs.hpp.in
(+10020 files in other folders)
